# cav4apd

./: .gitignore  README.md  main.py  pyproject.toml
app/: data.py  demo.py  llm.py  utils.py
data/: harmfulness.csv
directions/Qwen-1_8B-chat/harmful/: blocks.1.hook_resid_pre.pt  blocks.10.hook_resid_pre.pt  blocks.11.hook_resid_pre.pt  blocks.12.hook_resid_pre.pt  blocks.13.hook_resid_pre.pt  blocks.14.hook_resid_pre.pt  blocks.15.hook_resid_pre.pt  blocks.16.hook_resid_pre.pt  blocks.17.hook_resid_pre.pt  blocks.18.hook_resid_pre.pt  blocks.19.hook_resid_pre.pt  blocks.2.hook_resid_pre.pt  blocks.20.hook_resid_pre.pt  blocks.21.hook_resid_pre.pt  blocks.22.hook_resid_pre.pt  blocks.23.hook_resid_pre.pt  blocks.3.hook_resid_pre.pt  blocks.4.hook_resid_pre.pt  blocks.5.hook_resid_pre.pt  blocks.6.hook_resid_pre.pt  blocks.7.hook_resid_pre.pt  blocks.8.hook_resid_pre.pt  blocks.9.hook_resid_pre.pt
directions/Qwen-1_8B-chat/harmless/: blocks.0.hook_resid_pre.pt  blocks.1.hook_resid_pre.pt  blocks.10.hook_resid_pre.pt  blocks.11.hook_resid_pre.pt  blocks.12.hook_resid_pre.pt  blocks.13.hook_resid_pre.pt  blocks.14.hook_resid_pre.pt  blocks.15.hook_resid_pre.pt  blocks.16.hook_resid_pre.pt  blocks.17.hook_resid_pre.pt  blocks.18.hook_resid_pre.pt  blocks.19.hook_resid_pre.pt  blocks.2.hook_resid_pre.pt  blocks.20.hook_resid_pre.pt  blocks.21.hook_resid_pre.pt  blocks.22.hook_resid_pre.pt  blocks.23.hook_resid_pre.pt  (+7 more)
notebooks/: Qwen-1_8B-chat.ipynb  YandexGPT_5_Lite_8B_instruct.ipynb  bypassing_refusal.ipynb  data.ipynb  gemma-2b-it.ipynb  gemma.ipynb  qwen.ipynb
(+88 files in other folders)
