[project]
name = "cav4apd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.7.0",
    "datasets>=3.4.1",
    "gradio>=5.22.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "transformers>=4.49.0",
]
