[project]
name = "cav4apd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.7.0",
    "colorama>=0.4.6",
    "datasets>=3.4.1",
    "einops>=0.8.1",
    "gradio>=5.22.0",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.3.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "transformer-lens>=2.15.0",
    "transformers>=4.49.0",
]
